force-app/main/default/objects/A_Configuration__mdt/A_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>A+ Configuration</label>
    <pluralLabel>A+ Configuration</pluralLabel>
</CustomObject>