force-app/main/default/objects/A_Configuration__mdt/fields/Child_Relationship_Names_Custom__c.field-meta.xml
<CustomField>
    <fullName>Child_Relationship_Names_Custom__c</fullName>
    <description>Child Relationship Names (Custom : Comma separated)</description>
    <inlineHelpText>Child Relationship Names (Custom : Comma separated)</inlineHelpText>
    <label>Child Relationship Names (Custom)</label>
    <type>TextArea</type>
</CustomField>