force-app/main/default/objects/A_Configuration__mdt/fields/Child_Relationship_Names_Standard__c.field-meta.xml
<CustomField>
    <fullName>Child_Relationship_Names_Standard__c</fullName>
    <description>Child Relationship Names (Standard: Comma separated)</description>
    <inlineHelpText>Child Relationship Names (Standard: Comma separated)</inlineHelpText>
    <label>Child Relationship Names (Standard)</label>
    <type>TextArea</type>
</CustomField>