force-app/main/default/objects/A_Configuration__mdt/fields/Community_ID__c.field-meta.xml
<CustomField>
    <fullName>Community_ID__c</fullName>
    <label>Community ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>