force-app/main/default/objects/A_Configuration__mdt/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <label>File Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>