force-app/main/default/objects/A_Configuration__mdt/fields/Record_Type_API_Names__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_API_Names__c</fullName>
    <description>Record Type API Names (Comma seperated)</description>
    <inlineHelpText>Record Type API Names (Comma seperated)</inlineHelpText>
    <label>Record Type API Names</label>
    <type>TextArea</type>
</CustomField>